[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Yann Simon <yann.simon@commercetools.de>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.10.7"
tokio = "0.2.22"
