[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Yann Simon <yann.simon@commercetools.de>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1", features = ["derive"]}
serde-aux = "1.1.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.10.1"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.6"
tracing-log = "0.1.1"
tracing-actix-web = "0.2.0"
unicode-segmentation = "1.7.1"

[dev-dependencies]
reqwest = "0.10.7"
tokio = "0.2.22"
lazy_static = "1.4.0"
claim = "0.4.0"
