[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Yann Simon <yann.simon.fr@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.0-beta.5"
serde = "1.0.115"
serde-aux = "1.1.0"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features=["std_rng"] }
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
claim = "0.4.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.3"
serde_json = "1.0.61"
actix-rt = "2"
linkify = "0.5.0"
once_cell = "1.8.0"
